# hammerstein

./: .gitignore  CHANGELOG.md  CONCEPT.md  LICENSE  README.md  human-judge-pairs-judgments.json  human-judge-v1.1-mapping.json  human-judge-v1.1-pairs.json  index.html  providers.yaml  pyproject.toml
corpus/: CORPUS-CURATION.md  __init__.py
design/: PILLARS.md
eval/: BENCHMARK-human-judge-2026-05-13.md  BENCHMARK-human-judge-v1.1-2026-05-13.md  BENCHMARK-v0.1.md  BENCHMARK-v0.md  QSET-v0.7-OOD.md  RESULTS-coder-bench.md  RESULTS-gibson-v3-2026-05-11.md  RESULTS-grok-2026-05-12.md  RESULTS-null-prompt-2026-05-11.md  RESULTS-tuesday-battery-2026-05-11.md  RESULTS-v0.1.md  RESULTS-v0.4.md  RESULTS-v0.7-OOD-2026-05-21.md  RESULTS-v06-grok-private-critique-2026-05-12.md  batch-a-multi-turn-adversarial.py  batch-a-results-2026-05-11.json  batch-b-cross-model.py  batch-b-results-2026-05-11.json  batch-c-quantization.sh  batch-c-results-2026-05-11.json  batch-d-results-2026-05-11.json  batch-d-wargamer-demo.py  distill-diagnostic-pod.py  distill-diagnostic-results-2026-05-10.json  format-v04-pod-results.py  format-v07-pod-results.py  gibson-probe-v3-pod.py  gibson-probe-v3-results-2026-05-11.json  human_judge.py  human_judge_runner.py  judge-v06-grok-surgical.py  judge_pairs.py  judge_pass.py  null-prompt-diagnostic-pod.py  null-prompt-diagnostic-results-2026-05-11.json  run-v03-neutral-scaffold.py  run-v04-pod.py  run-v04-sonnet-raw.py  run-v06-grok-surgical.py  run-v07-ood.py  (+3 more)
hammerstein_cli/: __init__.py  dispatch.py  shell.py
hammerstein_resources/: __init__.py
harness/: README.md  hammerstein.py
prompts/: COUNTER-2AM-OPERATOR.md  SYSTEM-PROMPT-CODER.md  SYSTEM-PROMPT.md  __init__.py
research/: HAMMERSTEIN-FRAMEWORK.md
scope/: HAMMERSTEIN-AUDIT-2026-05-06-VISION-ROUTING.md  HAMMERSTEIN-AUDIT-2026-05-06-VISION-SUPPORT.md  PHASED-ROADMAP.md  VISION-SUPPORT.md
scripts/: h  h.ps1  hlog  hquery  (+1 more)
(+140 files in other folders)
