[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hammerstein-ai"
version = "0.0.1"
description = "Hammerstein: strategic-reasoning harness packaged as a minimal CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "the operator" }]
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "pytest>=8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
hammerstein = "hammerstein_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["harness", "."]

[tool.setuptools.package-data]
corpus = ["**/*.md"]
"corpus.entries" = ["**/*.md"]
prompts = ["**/*.md"]
"prompts.templates" = ["**/*.md"]
hammerstein_resources = ["**/*.yaml"]

